Try to fix navbar on mobile

--- a/prodekoorg/static/scss/navbar.scss
+++ b/prodekoorg/static/scss/navbar.scss
@@ -22,6 +22,10 @@
   background-color: white;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
 
+  a[data-toggle='collapse'] {
+    cursor: pointer;
+  }
+
   #navbar-logo {
     height: 40px;
   }
